# penguins_classic_ml

./: .env.example  .gitignore  .pre-commit-config.yaml  DOCKER_FIXES.md  Dockerfile.app  Dockerfile.train  Makefile  README.md  bandit-report.json  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
configs/: experiment_default.yaml  serving.yaml
data/interim/: .gitkeep
data/processed/: .gitkeep
data/raw/: .gitkeep
docker/: .gitkeep  README.md
docs/: CLI_USAGE.md  DOCKER.md  README.md
examples/: USAGE_GUIDE.md  custom_experiment.yaml  prediction_requests.md  sample_requests.json  test_api.py  test_api.sh
models/: .gitkeep  registry.json
models/metrics/: randomforestclassifier_metrics.json  randomforestclassifier_tuned_metrics.json
notebooks/: .gitkeep
results/: .gitkeep  training_results.json
results/experiments/: .gitkeep
scripts/: optimize_performance.sh  quick_train.sh  run_experiments.sh  setup_dev.sh  test_containers.sh  validate_docker.sh  validate_setup.sh
src/: __init__.py  cli.py
src/core/: config.py  logging.py
src/data/: __init__.py  dataset.py  schema.py
src/features/: __init__.py  preprocess.py
src/models/: __init__.py  metrics.py  registry.py  trainer.py
src/serving/: __init__.py  app.py  schemas.py
tests/: conftest.py  test_cli.py  test_code_quality.py  test_data_schema.py  test_dataset.py  test_integration.py  test_metrics.py  test_preprocess.py  test_registry.py  test_serving.py  test_trainer.py
