[project]
name = "classic-ml"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "black>=25.9.0",
    "click>=8.0.0",
    "fastapi>=0.117.1",
    "httpx>=0.25.0",
    "isort>=6.0.1",
    "joblib>=1.5.2",
    "loguru>=0.7.0",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.0.0",
    "pytest>=8.4.2",
    "pytest-cov>=4.0.0",
    "pyyaml>=6.0.2",
    "ruff>=0.13.1",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.36.0",
]
